Fix overflow in sesions modal

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -178,3 +178,9 @@ div.dropdown-menu-navbar1.show {
 .pagination .disabled {
     color: #C0C0C0;
 }
+
+//  Sesions modal
+.sesions-overflow {
+  overflow-y: scroll;
+  height: 70vh;
+}
